<resources>
    <string name="app_name">Kuwait Women Market</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="name_empty_err_msg">Name can\'t be empty</string>
    <string name="username_empty_err_msg">Username can\'t be empty</string>
    <string name="email_empty_err_msg">Email can\'t be empty</string>
    <string name="phone_empty_err_msg">Phone can\'t be empty</string>
    <string name="password_empty_err_msg">Password can\'t be empty</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="model_name_value">Model Name: %s</string>
    <string name="category_name_value">Category: %s</string>
    <string name="price_value">Price: %.0f KWD</string>
    <string name="selling_shop_name_value">Selling Shop: %s</string>
    <string name="shop_phone_value">Phone: %s</string>
    <string name="shop_email_value">Email: %s</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core         functionality.</string>
    <string name="settings">Settings</string>
    <string name="ad_views_value">Ad Views: %d</string>
</resources>
